# learningOpenGl

./: CMakeLists.txt  main.cpp
documentation/: bookDocumentation.md
shaders/: triangleFragment.fsh  triangleShader.vsh
src/: glad.c  glfwService.h  triangleData.h  windowcreation.h
